// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component should catch js errors 1`] = `
<h1>
  Something went wrong with js code.
</h1>
`;

exports[`App component should show header with details 1`] = `
<main>
  <HeaderWithDetails
    movie={
      Object {
        "genres": Array [],
      }
    }
  />
  <BodyWithResults
    genre=""
    handleMovieCardClick={[Function]}
    movies={Array []}
  />
  <Footer />
</main>
`;

exports[`App component works as expected 1`] = `
<main>
  <HeaderWithSearch />
  <BodyWithResults
    genre={null}
    handleMovieCardClick={[Function]}
    movies={Array []}
  />
  <Footer />
</main>
`;
